--- a/.i3/config
+++ b/.i3/config
@@ -11,8 +11,13 @@
 
 set $mod Mod4
 
+# dont folow moue
+focus_follows_mouse no
+
 # font for window titles. ISO 10646 = Unicode
-font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
+# font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
+# font -*-terminus-medium-r-*-*-*-120-75-75-*-*-iso8859-15
+font -artwiz-cure-*-r-normal-*-*-*-*-*-*-*-iso8859-1
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
