--- a/.i3/config
+++ b/.i3/config
@@ -16,8 +16,9 @@ focus_follows_mouse no
 
 # font for window titles. ISO 10646 = Unicode
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-# font -*-terminus-medium-r-*-*-*-120-75-75-*-*-iso8859-15
-font -artwiz-cure-*-r-normal-*-*-*-*-*-*-*-iso8859-1
+ font -*-terminus-medium-r-*-*-*-120-75-75-*-*-iso8859-15
+# font -artwiz-cure-*-r-normal-*-*-*-*-*-*-*-iso106461
+# font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -80,6 +81,7 @@ bindsym $mod+a focus parent
 
 # focus the child container
 #bindcode $mod+d focus child
+
 
 # switch to workspace
 bindsym $mod+1 workspace 1
@@ -149,22 +151,38 @@ bindsym Shift+Right resize grow   right 10 px or 10 ppt
 bindsym Return mode "default"
 bindsym Escape mode "default"
 }
+## binding of special keys 
+## F1 - F2
+bind 232 exec xbacklight -dec 15
+bind 233 exec xbacklight -inc 15
+## sound
+bind 121 exec amixer -q set Master toggle
+bind 122 exec amixer -q set Master 5-
+bind 123 exec amixer -q set Master 5+
+
+
+## assigments
+assign [class="gpodder"] → 5
+for_window [class="Pidgin"] floating enable
+for_window [class="gpodder"] floating enable
+
+
+
 
 # bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 
-
-
 bar {
-    status_command conky -c ~/.i3/i3barconky.rc
+#    status_command conky -c ~/.i3/i3barconky.rc
+    status_command i3status -c ~/.i3/.i3status.conf
     position          bottom
     mode              dock
     workspace_buttons yes
-    
-    font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
 
+    font -misc-dejavu sans mono-medium-r-normal--10-*-*-*-m-*-iso10646-1
+    
     colors {
         background #222222
         statusline #ffffff
