--- a/.i3/config
+++ b/.i3/config
@@ -164,10 +164,10 @@ bind 123 exec amixer -q set Master 7+
 ## assigments
 for_window [class="Pidgin"] floating enable
 for_window [class="Gpodder"] 5 floating enable
-for_window [class="Eclipse"] floating enable
+##for_window [class="Eclipse"] floating enable
 for_window [class="Gimp"] floating enable
 for_window [class="xterm"] border 0pixel
-
+for_window [class="SMPlayer"] border 0pixel
 # bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
