--- a/.i3/config
+++ b/.i3/config
@@ -30,7 +30,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+C kill
 
 # start dmenu (a program launcher)
-bindsym $mod+r exec dmenu_run
+bindsym $mod+r exec yeganesh -x | sh
 
 # change focus
 bindsym $mod+j focus left
